# simple-irc-client

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  Roadmap  cmake_install.cmake  irc_server  rtp_packet.h
doc/: #relazione_vanin.lyx#  lucidi_vanin.odp  relazione_vanin.lyx  relazione_vanin.lyx~  relazione_vanin.tex
doc/html/: CMakeCCompilerId_8c_source.html  annotated.html  channel_8c_source.html  channel_8h.html  channel_8h_source.html  check__channel_8c_source.html  check__user_8c_source.html  classes.html  commands_8c_source.html  commands_8h.html  commands_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_4b38482e03f8222e57f6983bf6ecd053.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8d44b6dce5e0aa8d997dd925bc6bf6aa.html  dir_d44c64559bbebec7f509842c48db8b23.html  errors_8c_source.html  errors_8h.html  errors_8h_source.html  feature__tests_8c_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  main_8c_source.html  menudata.js  pages.html  recieve__commands_8c_source.html  recieve__commands_8h.html  recieve__commands_8h_source.html  response_8c_source.html  response_8h.html  response_8h_source.html  (+17 more)
doc/html/search/: all_2.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
doc/latex/: annotated.tex  channel_8h.tex  commands_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  errors_8h.tex  files.tex  index.tex  main_8c.tex  recieve__commands_8h.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc  response_8h.tex  structChannel.tex  structUser.tex  struct__Channel__list.tex  struct__User__list.tex  text_8h.tex  user_8h.tex  user__thread_8h.tex  utils_8h.tex
include/: channel.h  commands.h  errors.h  receive_commands.h  recieve_commands.h  response.h  text.h  user.h  user_thread.h  util.h  utils.h
src/: CMakeLists.txt  Makefile  channel.c  cmake_install.cmake  commands.c  errors.c  main.c  receive_commands.c  recieve_commands.c  response.c  text.c  user.c  user_thread.c  utils.c
tests/: CMakeLists.txt  Makefile  check_channel.c  check_user.c  cmake_install.cmake
